--- a/rule.ini
+++ b/rule.ini
@@ -72,7 +72,7 @@ custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany)`http://cp.clo
 custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|Netherlands)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=俄罗斯节点`url-test`(俄罗斯|RU|ru|Russia)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(俄罗斯|RU|ru|Russia)`http://cp.cloudflare.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
