--- a/rule.ini
+++ b/rule.ini
@@ -3,7 +3,7 @@
 ; 20240905 23:48
 ; 设置规则标志位
 ; 自定义的全球直连列表，最高优先级
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/custom_direct.list
+; ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/custom_direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
