--- a/rule.ini
+++ b/rule.ini
@@ -6,7 +6,9 @@
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/wmgylc/clash_rule/main/custom_proxy.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/custom_direct.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
+; 原list配置了v2ray走直连，此处fork后改为正常代理
+; ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/direct_fork_ios_rule_script.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
