--- a/rule.ini
+++ b/rule.ini
@@ -94,7 +94,7 @@ custom_proxy_group=📹 YouTube节点`url-test`(YouTube)`http://cp.cloudflare.co
 ; e-hentai节点
 custom_proxy_group=🌍 E绅士节点`url-test`(E站)`http://cp.cloudflare.com/generate_204`300,,50
 ; gpt节点
-custom_proxy_group=💬 GPT节点`fallback`(gpt|GPT)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=💬 GPT节点`url-test`(gpt|GPT)`http://cp.cloudflare.com/generate_204`300,,50
 ;设置分组标志位
 
 enable_rule_generator=true
