--- a/rule.ini
+++ b/rule.ini
@@ -61,7 +61,7 @@ ruleset=🌍 国外媒体,[]FINAL
 custom_proxy_group=📹 YouTube故障转移`fallback`[]📹 YouTube节点测速`[]🇬 谷歌服务`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=📹 YouTube节点测速`url-test`(YouTube)`http://cp.cloudflare.com/generate_204`300,,50
 
-custom_proxy_group=🌍 E绅士故障转移`fallback`[]🌍 E绅士节点测速`[]🚀 国别手动选择`[]🚀 国别手动选择`[]🎯 全球直连
+custom_proxy_group=🌍 E绅士故障转移`fallback`[]🌍 E绅士节点测速`[]🚀 国别手动选择`[]🚀 国别手动选择`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🌍 E绅士节点测速`url-test`(E站)`http://cp.cloudflare.com/generate_204`300,,50
 
 custom_proxy_group=💬 GPT节点`url-test`(gpt|GPT)`http://cp.cloudflare.com/generate_204`300,,50
