--- a/rule.ini
+++ b/rule.ini
@@ -81,7 +81,7 @@ custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点
 custom_proxy_group=📺 Bahamut`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
 
 ; 基础架构，不直接使用
-custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=♻️ 国别测速`url-test`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 国别手动选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点
 
