--- a/rule.ini
+++ b/rule.ini
@@ -68,23 +68,23 @@ custom_proxy_group=🌍 E绅士节点测速`url-test`(E站)`http://cp.cloudflare
 custom_proxy_group=💬 GPT节点`url-test`(gpt|GPT)`http://cp.cloudflare.com/generate_204`300,,50
 
 ; 主流网站特定逻辑, 一般使用自动选择即可
-custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=Ⓜ️ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=Ⓜ️ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
 ; TODO Bahamut要导入台湾节点
-custom_proxy_group=📺 Bahamut`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=📺 Bahamut`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
 
 ; 基础架构，不直接使用
-custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=♻️ 国别测速`url-test`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🚀 国别手动选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点
+custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=♻️ 国别测速`url-test`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🚀 国别手动选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点
 
 ; custom_proxy_group=♻️ 节点测速`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 ; custom_proxy_group=🚀 节点选择`select`.*
@@ -104,6 +104,7 @@ custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany)`http://cp.clo
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(俄罗斯|RU|ru|Russia)`http://cp.cloudflare.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾节点`url-test`(台湾|TW|tw|Taiwan|taiwan)`http://cp.cloudflare.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
