--- a/rule.ini
+++ b/rule.ini
@@ -68,6 +68,7 @@ custom_proxy_group=🌍 E绅士故障转移`fallback`[]🌍 E绅士节点测速`
 custom_proxy_group=🌍 E绅士节点测速`url-test`(E站)`http://cp.cloudflare.com/generate_204`60,,50
 
 custom_proxy_group=💬 GPT节点`url-test`(gpt|GPT)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=💬 Gemini节点`url-test`(mini)`http://cp.cloudflare.com/generate_204`60,,50
 
 custom_proxy_group=🌍 日本成人手动选择`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
 
@@ -90,9 +91,6 @@ custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]
 custom_proxy_group=♻️ 国别测速`url-test`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🚀 国别手动选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点
 
-; custom_proxy_group=♻️ 节点测速`url-test`.*`http://cp.cloudflare.com/generate_204`60,,50
-; custom_proxy_group=🚀 节点选择`select`.*
-
 custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇭🇰 香港节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
@@ -109,6 +107,8 @@ custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)
 custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(俄罗斯|RU|ru|Russia)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇹🇼 台湾节点`url-test`(台湾|TW|tw|Taiwan|taiwan)`http://cp.cloudflare.com/generate_204`60,,50
+; TODO 印度 & 东南亚
+
 
 enable_rule_generator=true
 overwrite_original_rules=true
