新增多个国别节点分组

--- a/rule.ini
+++ b/rule.ini
@@ -107,6 +107,12 @@ custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)
 custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(俄罗斯|RU|ru|Russia)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇹🇼 台湾节点`url-test`(台湾|TW|tw|Taiwan|taiwan)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🇦🇺 澳大利亚节点`url-test`(澳大利亚|澳洲|AU|Australia)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|NL|Netherlands)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|CA|Canada)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🇮🇳 印度节点`url-test`(印|IN|India)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🌐 其他国家`url-test`(法国|意大利|西班牙|巴西|墨西哥|阿根廷|瑞士|瑞典|挪威|丹麦|芬兰|比利时|奥地利|波兰|乌克兰|阿联酋|沙特|泰国|马来西亚|菲律宾|印度尼西亚|南非|埃及|新西兰|爱尔兰|葡萄牙|希腊|捷克|罗马尼亚|智利|秘鲁|哥伦比亚|FR|IT|ES|BR|MX|AR|CH|SE|NO|DK|FI|BE|AT|PL|UA|AE|SA|TH|MY|PH|ID|ZA|EG|NZ|IE|PT|GR|CZ|RO|CL|PE|CO)`http://cp.cloudflare.com/generate_204`60,,50
+
 ; TODO 印度 & 东南亚
 
 
