大幅度精简 rule.ini

--- a/rule.ini
+++ b/rule.ini
@@ -1,8 +1,6 @@
 ; rulset 由 <指定的custom_proxy_group> <匹配 url 或 ip 的逻辑 list> 组成，后者都会通过前者指定的节点访问
 ; custom_proxy_group 由 <名称> <切换逻辑> <其他custom_proxy_group 或 匹配关键字节点> <url-test针对的网站, 延迟切换时间等> 组成，每个 custom_proxy_group 返回一个节点
-
-; TODO AI?
-; TODO 台湾节点
+; 所以是先有custom_proxy_group，再有 ruleset
 
 ; 自定义 ruleset
 ; 自定义的指定翻墙列表，最高优先级
@@ -59,50 +57,54 @@ ruleset=🎯 全球直连,[]GEOIP,LAN,no-resolve
 ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🌍 国外媒体,[]FINAL
 
-; 针对特定 ruleset 定制
-; TODO 正则和组是否可以一起使用
-custom_proxy_group=📹 YouTube故障转移`fallback`[]📹 YouTube节点测速`[]🇬 谷歌服务`http://cp.cloudflare.com/generate_204`60,,50
-custom_proxy_group=📹 YouTube节点测速`url-test`(YouTube)`http://cp.cloudflare.com/generate_204`60,,50
-
-custom_proxy_group=🌍 E绅士故障转移`fallback`[]🌍 E绅士节点测速`[]🚀 国别手动选择`[]🚀 国别手动选择`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,50
+; 此处如果节点测速为空，则直接会变成 direct
+custom_proxy_group=🌍 E绅士故障转移`fallback`[]🌍 E绅士节点测速`♻️ 成人国别故障转移
 custom_proxy_group=🌍 E绅士节点测速`url-test`(E站)`http://cp.cloudflare.com/generate_204`60,,50
 
-custom_proxy_group=💬 GPT节点`url-test`(gpt|GPT)`http://cp.cloudflare.com/generate_204`60,,50
-custom_proxy_group=💬 Gemini节点`url-test`(mini)`http://cp.cloudflare.com/generate_204`60,,50
+; TODO 测试使用默认的
+; custom_proxy_group=💬 GPT节点`url-test`(gpt|GPT)`http://cp.cloudflare.com/generate_204`60,,50
 
-custom_proxy_group=🌍 日本成人手动选择`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+; 避开不提供服务的国家
+custom_proxy_group=🌍 成人手动选择`select`♻️ 成人国别故障转移
 
-; 主流网站特定逻辑, 一般使用自动选择即可
-custom_proxy_group=🌍 国外媒体`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=Ⓜ️ Copilot`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-custom_proxy_group=🎮 Steam`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
-; TODO Bahamut要导入台湾节点
-custom_proxy_group=📺 Bahamut`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🚀 国别手动选择`[]♻️ 国别故障转移`[]♻️ 国别测速`[]🎯 全球直连
+; 苹果直连，允许手动设置
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]♻️ 国别测速故障转移
 
-; 基础架构，不直接使用
-custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`60,,50
-custom_proxy_group=♻️ 国别测速`url-test`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`http://cp.cloudflare.com/generate_204`60,,50
-custom_proxy_group=🚀 国别手动选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇹🇼 台湾节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点
+; 微软 copilot 翻墙，其他直连
+custom_proxy_group=Ⓜ️ Copilot`select`[]♻️ 国别测速故障转移
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连
 
-custom_proxy_group=🌍 国内媒体`select`[]🎯 全球直连`[]🇭🇰 香港节点
+; 谷歌使用故障转移，尽可能避免不提供完整服务的地区
+custom_proxy_group=📢 谷歌FCM`select`♻️ 谷歌国别故障转移
+custom_proxy_group=🇬 谷歌服务`select`♻️ 谷歌国别故障转移
+custom_proxy_group=📹 YouTube故障转移`fallback`[]📹 YouTube节点测速`[]♻️ 谷歌国别故障转移
+custom_proxy_group=📹 YouTube节点测速`url-test`(YouTube)`http://cp.cloudflare.com/generate_204`60,,50
+
+; 其他网站都正常翻墙或直连或屏蔽
+custom_proxy_group=🚀 GitHub`select`[]♻️ 国别测速故障转移
+custom_proxy_group=📲 Telegram`select`[]♻️ 国别测速故障转移
+custom_proxy_group=🎮 游戏平台`select`[]♻️ 国别测速故障转移
+custom_proxy_group=🎮 Steam`select`[]♻️ 国别测速故障转移
+custom_proxy_group=🌍 国外媒体`select`[]♻️ 国别测速故障转移
+custom_proxy_group=🌍 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🛑 广告拦截`select`[]REJECT
+
+; 基础架构
+custom_proxy_group=♻️ 成人国别故障转移`fallback`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🌐 其他国家`[]🎯 全球直连
+custom_proxy_group=♻️ 谷歌国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连
+custom_proxy_group=♻️ 国别测速故障转移`fallback`[]♻️ 国别测速`[]🎯 全球直连
+custom_proxy_group=♻️ 国别测速`url-test`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🚀 国别手动选择`select`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家
 
 ; 国别分组
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`60,,50
-custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://cp.cloudflare.com/generate_204`60,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(英国|Great Britain)`http://cp.cloudflare.com/generate_204`60,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🇬🇧 英国节点`url-test`(英国|Great Britain|UR)`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany|DE)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇻🇳 越南节点`url-test`(越南|Vietnam)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(俄罗斯|RU|ru|Russia)`http://cp.cloudflare.com/generate_204`60,,50
@@ -112,9 +114,6 @@ custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|NL|Netherlands)`http:/
 custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|CA|Canada)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🇮🇳 印度节点`url-test`(印|IN|India)`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🌐 其他国家`url-test`(法国|意大利|西班牙|巴西|墨西哥|阿根廷|瑞士|瑞典|挪威|丹麦|芬兰|比利时|奥地利|波兰|乌克兰|阿联酋|沙特|泰国|马来西亚|菲律宾|印度尼西亚|南非|埃及|新西兰|爱尔兰|葡萄牙|希腊|捷克|罗马尼亚|智利|秘鲁|哥伦比亚|FR|IT|ES|BR|MX|AR|CH|SE|NO|DK|FI|BE|AT|PL|UA|AE|SA|TH|MY|PH|ID|ZA|EG|NZ|IE|PT|GR|CZ|RO|CL|PE|CO)`http://cp.cloudflare.com/generate_204`60,,50
-
-; TODO 印度 & 东南亚
-
 
 enable_rule_generator=true
 overwrite_original_rules=true
