--- a/rule.ini
+++ b/rule.ini
@@ -58,7 +58,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🌍 国外媒体,[]FINAL
 
 ; 此处如果节点测速为空，则直接会变成 direct
-custom_proxy_group=🌍 E绅士故障转移`fallback`[]🌍 E绅士节点测速`♻️ 成人国别故障转移`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=🌍 E绅士故障转移`fallback`[]🌍 E绅士节点测速`[]♻️ 成人国别故障转移`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=🌍 E绅士节点测速`url-test`(E站)`http://cp.cloudflare.com/generate_204`60,,50
 
 ; TODO 测试使用默认的
@@ -75,8 +75,8 @@ custom_proxy_group=Ⓜ️ Copilot`select`[]♻️ 国别测速故障转移
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连
 
 ; 谷歌使用故障转移，尽可能避免不提供完整服务的地区
-custom_proxy_group=📢 谷歌FCM`select`♻️ 谷歌国别故障转移
-custom_proxy_group=🇬 谷歌服务`select`♻️ 谷歌国别故障转移
+custom_proxy_group=📢 谷歌FCM`select`[]♻️ 谷歌国别故障转移
+custom_proxy_group=🇬 谷歌服务`select`[]♻️ 谷歌国别故障转移
 custom_proxy_group=📹 YouTube故障转移`fallback`[]📹 YouTube节点测速`[]♻️ 谷歌国别故障转移`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=📹 YouTube节点测速`url-test`(YouTube)`http://cp.cloudflare.com/generate_204`60,,50
 
