--- a/rule.ini
+++ b/rule.ini
@@ -66,30 +66,30 @@ custom_proxy_group=🌍 E绅士节点测速`url-test`(E站)`http://cp.cloudflare
 custom_proxy_group=♻️ 成人国别故障转移`fallback`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇸🇬 新加坡节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,50
 
 ; 苹果直连，允许手动设置
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]♻️ 谷歌国别故障转移
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]♻️ 国别故障转移
 
 ; 微软 copilot 翻墙，其他直连
-custom_proxy_group=Ⓜ️ Copilot`select`[]♻️ 谷歌国别故障转移
+custom_proxy_group=Ⓜ️ Copilot`select`[]♻️ 国别故障转移
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连
 
 ; 谷歌使用故障转移，尽可能避免不提供完整服务的地区
-custom_proxy_group=📢 谷歌FCM`select`[]♻️ 谷歌国别故障转移
-custom_proxy_group=🇬 谷歌服务`select`[]♻️ 谷歌国别故障转移
-custom_proxy_group=📹 YouTube故障转移`fallback`[]📹 YouTube节点测速`[]♻️ 谷歌国别故障转移`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=📢 谷歌FCM`select`[]♻️ 国别故障转移
+custom_proxy_group=🇬 谷歌服务`select`[]♻️ 国别故障转移
+custom_proxy_group=📹 YouTube故障转移`fallback`[]📹 YouTube节点测速`[]♻️ 国别故障转移`http://cp.cloudflare.com/generate_204`60,,50
 custom_proxy_group=📹 YouTube节点测速`url-test`(YouTube)`http://cp.cloudflare.com/generate_204`60,,50
 
 ; 其他网站都正常翻墙或直连或屏蔽
-custom_proxy_group=🚀 GitHub`select`[]♻️ 谷歌国别故障转移
-custom_proxy_group=📲 Telegram`select`[]♻️ 谷歌国别故障转移
-custom_proxy_group=🎮 游戏平台`select`[]♻️ 谷歌国别故障转移
-custom_proxy_group=🎮 Steam`select`[]♻️ 谷歌国别故障转移
-custom_proxy_group=🌍 国外媒体`select`[]♻️ 谷歌国别故障转移
+custom_proxy_group=🚀 GitHub`select`[]♻️ 国别故障转移
+custom_proxy_group=📲 Telegram`select`[]♻️ 国别故障转移
+custom_proxy_group=🎮 游戏平台`select`[]♻️ 国别故障转移
+custom_proxy_group=🎮 Steam`select`[]♻️ 国别故障转移
+custom_proxy_group=🌍 国外媒体`select`[]♻️ 国别故障转移
 custom_proxy_group=🌍 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT
 
 ; 基础架构
-custom_proxy_group=♻️ 谷歌国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,50
+custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,50
 ; custom_proxy_group=♻️ 国别测速故障转移`fallback`[]♻️ 国别测速`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,50
 ; custom_proxy_group=♻️ 国别测速`url-test`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`http://cp.cloudflare.com/generate_204`60,,50
 ; custom_proxy_group=🚀 国别手动选择`select`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家
