--- a/rule.ini
+++ b/rule.ini
@@ -16,7 +16,7 @@ ruleset=♻️ 成人国别故障转移,https://raw.githubusercontent.com/wmgylc
 
 ; 第三方 ruleset
 ; youtube无广告节点
-ruleset=📹 YouTube故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+; ruleset=📹 YouTube故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
