Refactor rulesets and proxy groups in rule.ini
Removed and commented out various rulesets for media and gaming platforms, and updated proxy groups.

--- a/rule.ini
+++ b/rule.ini
@@ -16,7 +16,6 @@ ruleset=♻️ 成人国别故障转移,https://raw.githubusercontent.com/wmgylc
 
 ; 第三方 ruleset
 ; youtube无广告节点
-; ruleset=📹 YouTube故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Direct.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/Aethersailor/Custom_OpenClash_Rules/main/rule/Custom_Proxy.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
@@ -30,20 +29,20 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rul
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ; ruleset=💬 GPT节点,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=Ⓜ️ Copilot,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Copilot/Copilot.list
-ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+; ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=🌍 国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/EA/EA.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Blizzard/Blizzard.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
-ruleset=🎮 Steam,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
-ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMedia/ChinaMedia.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/EA/EA.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Blizzard/Blizzard.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UBI/UBI.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Nintendo/Nintendo.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
+ruleset=♻️ 国别故障转移,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
@@ -75,18 +74,14 @@ custom_proxy_group=📹 YouTube节点测速`url-test`(YouTube)`http://cp.cloudfl
 ; 其他网站都正常翻墙或直连或屏蔽
 custom_proxy_group=🚀 GitHub`select`[]♻️ 国别故障转移
 custom_proxy_group=📲 Telegram`select`[]♻️ 国别故障转移
-custom_proxy_group=🎮 游戏平台`select`[]♻️ 国别故障转移
+custom_proxy_group=♻️ 国别故障转移`select`[]♻️ 国别故障转移
 custom_proxy_group=🎮 Steam`select`[]♻️ 国别故障转移
 custom_proxy_group=🌍 国外媒体`select`[]♻️ 国别故障转移
-custom_proxy_group=🌍 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT
 
 ; 基础架构
 custom_proxy_group=♻️ 国别故障转移`fallback`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇭🇰 香港节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
-; custom_proxy_group=♻️ 国别测速故障转移`fallback`[]♻️ 国别测速`[]🎯 全球直连`http://cp.cloudflare.com/generate_204`60,,120
-; custom_proxy_group=♻️ 国别测速`url-test`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家`http://cp.cloudflare.com/generate_204`60,,120
-; custom_proxy_group=🚀 国别手动选择`select`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇹🇷 土耳其节点`[]🇻🇳 越南节点`[]🇷🇺 俄罗斯节点`[]🇹🇼 台湾节点`[]🇦🇺 澳大利亚节点`[]🇳🇱 荷兰节点`[]🇨🇦 加拿大节点`[]🇮🇳 印度节点`[]🌐 其他国家
 
 ; 国别分组
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://cp.cloudflare.com/generate_204`60,,120
