--- a/rule.ini
+++ b/rule.ini
@@ -13,7 +13,7 @@ ruleset=🛑 广告拦截,https://raw.githubusercontent.com/wmgylc/clash_rule/ma
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/direct_fork_ios_rule_script.list
 
 ; gemini test
-ruleset=🌍 Gemini,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/gemini.list
+; ruleset=🌍 Gemini,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/gemini.list
 
 ; 第三方 ruleset
 ; 大部分域名都要通过域名规则匹配，减少一次 dns 查询耗时
