--- a/rule.ini
+++ b/rule.ini
@@ -13,7 +13,7 @@ ruleset=🛑 广告拦截,https://raw.githubusercontent.com/wmgylc/clash_rule/ma
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/wmgylc/clash_rule/main/direct_fork_ios_rule_script.list
 
 ; gemini test
-; ruleset=🌍 Gemini,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/gemini.list
+ruleset=🌍 Gemini,https://raw.githubusercontent.com/wmgylc/clash_rule/refs/heads/main/gemini.list
 
 ; 第三方 ruleset
 ; 大部分域名都要通过域名规则匹配，减少一次 dns 查询耗时
@@ -52,7 +52,7 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=♻️ 国别故障转移,[]FINAL
 
 ; Gemini test
-custom_proxy_group=🌍 Gemini`url-test`^(?!.*(🇺🇸|美国|美西|美东|US|USA|United States|🇷🇺|俄罗斯|RU|Russia|🇭🇰|香港|HK|Hong Kong|IPv6|ipv6)).*$`http://cp.cloudflare.com/generate_204`60,,120
+custom_proxy_group=🌍 Gemini`url-test`^(?=.*(->|→))(?!.*(🇺🇸|🇷🇺|🇭🇰|美国|美西|美东|俄罗斯|香港|\bUS\b|\bUSA\b|\bRU\b|\bHK\b|IPv6)).*$`http://cp.cloudflare.com/generate_204`60,,120
 
 ; 基础架构
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
